# Adaptive-Memory-Allocation

./: CMakeLists.txt  README.md  main.cpp  project.md
include/: AdaptiveAllocator.h  AllocationTracker.h  Allocator.h  Benchmark.h  BuddyAllocator.h  CAllocator.h  FreeListAllocator.h  LinearAllocator.h  LinkedList.h  MemoryGuard.h  PoolAllocator.h  SlabAllocator.h  StackAllocator.h  TLSFAllocator.h  Utils.h
src/: AdaptiveAllocator.cpp  Benchmark.cpp  BuddyAllocator.cpp  CAllocator.cpp  FreeListAllocator.cpp  LinearAllocator.cpp  PoolAllocator.cpp  SlabAllocator.cpp  StackAllocator.cpp  TLSFAllocator.cpp
